--- a/css/cwep.css
+++ b/css/cwep.css
@@ -259,10 +259,11 @@ a:focus {
 
 @media(min-width:767px) {
     .content-section {
-        padding-top: 250px;
+        padding-top: 200px;
     }
 
     .download-section {        
+        padding-top: 50px;
     }
 
     #map {
@@ -344,6 +345,11 @@ img::-moz-selection {
 body {
     webkit-tap-highlight-color: rgba(255,255,255,.2);
 }
+
+#contact {
+    padding-bottom: 100px;
+}
+
 
 #contact {
     padding-bottom: 100px;
